ajustes novos campos
e implementações de tentativas de autenticar no login

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -27,6 +27,8 @@
         <h3>Usuários</h3>
     </div>
     <div>
+        <!-- <p>usuário: Cliente</p>
+        <p>password: 123456</p> -->
         <p>usuário: guest1</p>
         <p>password: guest1</p>
     </div>
