--- a/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
+++ b/src/app/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
@@ -41,6 +41,16 @@
             <input matInput required placeholder="Input" minlength="11" [(ngModel)]="pessoa.cpf" name="nome" placeholder="CPF">
             <mat-error>informa um cpf válido</mat-error>
         </mat-form-field>
+        
+        <mat-form-field>
+          <input matInput placeholder="Input" [(ngModel)]="pessoa.endereco" name="endereco" placeholder="Endereco">
+        </mat-form-field>
+        {{pessoa.endereco}}
+
+        <mat-form-field>
+          <input matInput type="number" placeholder="Input" [(ngModel)]="pessoa.telefone" name="telefone" placeholder="Telefone">
+        </mat-form-field>
+        {{pessoa.telefone}}
 
     </form>
     <button mat-raised-button [disabled]="form.invalid" (click)="salvar()" class="cadastro">{{editando? 'Salvar ' : 'Cadastrar'}}</button>
