--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -14,10 +14,10 @@
       multiTemplateDataRows
       class="mat-elevation-z8">
     <ng-container 
-      matColumnDef="{{column}}" 
-      *ngFor="let column of columnsToDisplay">
+      *ngFor="let column of columnsToDisplay"
+      matColumnDef="{{column}}" >
       <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-      <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+      <td mat-cell *matCellDef="let element"> {{element[column]}}</td>
     </ng-container>
   
 
