ajustes para usar o oauth2

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -27,15 +27,8 @@
         <h3>Usuários</h3>
     </div>
     <div>
-        <!-- <p>usuário: Cliente</p>
-        <p>password: 123456</p> -->
-        <p>usuário: guest1</p>
-        <p>password: guest1</p>
+        <p>usuário: guest</p>
+        <p>password: guest</p>
     </div>
     <br>
-    <!-- <div>
-        <p>usuário: guest2</p>
-        <p>password: guest2</p>
-    </div> -->
-
   </div>
